Initialize React app skeleton (CRA)

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,21 @@
 .DS_Store
 
+# dependencies
+node_modules/
+
+# production
+build/
+dist/
+
+# misc
+.env
+.env.*.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# editor / tooling
+.vscode/
+.idea/
+
